// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text looks like a "body" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="body"
    >
      <Text
        style={
          Object {
            "large": Object {
              "fontFamily": "",
              "fontSize": 14,
              "fontWeight": 400,
              "lineHeight": "20px",
            },
            "small": Object {
              "fontFamily": "",
              "fontSize": 12,
              "fontWeight": 400,
              "lineHeight": "16px",
            },
          }
        }
        variant="body"
      >
        <Text
          style={
            Object {
              "large": Object {
                "fontFamily": "",
                "fontSize": 14,
                "fontWeight": 400,
                "lineHeight": "20px",
              },
              "small": Object {
                "fontFamily": "",
                "fontSize": 12,
                "fontWeight": 400,
                "lineHeight": "16px",
              },
            }
          }
          variant="body"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "body.small" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="body.small"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 12,
            "fontWeight": 400,
            "lineHeight": "16px",
          }
        }
        variant="body.small"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 12,
              "fontWeight": 400,
              "lineHeight": "16px",
            }
          }
          variant="body.small"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "button" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="button"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 14,
            "fontWeight": 600,
            "lineHeight": "20px",
          }
        }
        variant="button"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 14,
              "fontWeight": 600,
              "lineHeight": "20px",
            }
          }
          variant="button"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "caption" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="caption"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 12,
            "fontWeight": 400,
            "lineHeight": "16px",
          }
        }
        variant="caption"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 12,
              "fontWeight": 400,
              "lineHeight": "16px",
            }
          }
          variant="caption"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "label" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="label"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 12,
            "fontWeight": 600,
            "lineHeight": "16px",
          }
        }
        variant="label"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 12,
              "fontWeight": 600,
              "lineHeight": "16px",
            }
          }
          variant="label"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "subtitle" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="subtitle"
    >
      <Text
        style={
          Object {
            "large": Object {
              "fontFamily": "",
              "fontSize": 16,
              "fontWeight": 600,
              "lineHeight": "24px",
            },
            "small": Object {
              "fontFamily": "",
              "fontSize": 14,
              "fontWeight": 600,
              "lineHeight": "20px",
            },
          }
        }
        variant="subtitle"
      >
        <Text
          style={
            Object {
              "large": Object {
                "fontFamily": "",
                "fontSize": 16,
                "fontWeight": 600,
                "lineHeight": "24px",
              },
              "small": Object {
                "fontFamily": "",
                "fontSize": 14,
                "fontWeight": 600,
                "lineHeight": "20px",
              },
            }
          }
          variant="subtitle"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "subtitle.small" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="subtitle.small"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 14,
            "fontWeight": 600,
            "lineHeight": "20px",
          }
        }
        variant="subtitle.small"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 14,
              "fontWeight": 600,
              "lineHeight": "20px",
            }
          }
          variant="subtitle.small"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "title.large" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="title.large"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 32,
            "fontWeight": 700,
            "lineHeight": "40px",
          }
        }
        variant="title.large"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 32,
              "fontWeight": 700,
              "lineHeight": "40px",
            }
          }
          variant="title.large"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "title.medium" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="title.medium"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 24,
            "fontWeight": 700,
            "lineHeight": "32px",
          }
        }
        variant="title.medium"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 24,
              "fontWeight": 700,
              "lineHeight": "32px",
            }
          }
          variant="title.medium"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Text looks like a "title.small" 1`] = `
<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
        ],
        "fontWeights": Array [
          400,
          600,
          700,
        ],
        "fonts": Array [
          "",
        ],
        "lineHeights": Array [
          "16px",
          "20px",
          "24px",
          "28px",
          "32px",
          "40px",
        ],
      }
    }
  >
    <emotion(Text)
      variant="title.small"
    >
      <Text
        style={
          Object {
            "fontFamily": "",
            "fontSize": 20,
            "fontWeight": 700,
            "lineHeight": "28px",
          }
        }
        variant="title.small"
      >
        <Text
          style={
            Object {
              "fontFamily": "",
              "fontSize": 20,
              "fontWeight": 700,
              "lineHeight": "28px",
            }
          }
          variant="title.small"
        >
          Hello World!
        </Text>
      </Text>
    </emotion(Text)>
  </ThemeProvider>
</ThemeProvider>
`;
